test/fail/duplicate-field.mo
actor class C() {
  public func m() {};
  public func n() {};
  public func m() {};  // Illegal!
};
